--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,20 @@
         android:layout_width="match_parent"
         android:layout_height="568dp"
         android:layout_weight="1" />
+    <Switch
+        android:id="@+id/switch_tema"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Modo oscuro"
+        android:layout_margin="16dp"
+        android:checked="false" />
+    <Button
+        android:id="@+id/btnCerrarSesion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cerrar Sesión"
+        android:layout_margin="16dp"
+        android:layout_gravity="end"
+        />
 
 </LinearLayout>
